fix(task): modify the logic of getChildTasks